# environmental-stac-generator

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  logging_config.json  pyproject.toml
.github/workflows/: test.yml
src/environmental_stac_generator/: __init__.py  cli.py  cog.py  ingest.py  logging_config.json  preprocess.py  utils.py
src/environmental_stac_generator/stac/: dataloader.py  generator.py  utils.py
src/icenet_dashboard_preprocessor/: __init__.py  cli.py  cog.py  ingest.py  preprocess.py  stac.py  utils.py
src/icenet_dashboard_preprocessor/stac/: dataloader.py  generator.py
src/icenet_geotiff_generator/: preprocess.py
tests/stac/: test_generator.py
